--- a/phase1/app/src/main/res/values/strings.xml
+++ b/phase1/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="preference_file_ranking">com.example.ourgame.ranking</string>
     <string name="preference_file_lastgame">com.example.ourgame.lastgame</string>
     <string name="username_empty">Username cannot be empty</string>
+    <string name="main_menu_button">Main Menu</string>
 </resources>
