--- a/phase1/app/src/main/res/values/strings.xml
+++ b/phase1/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
+    <string name="welcome">Welcome</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="username_error">Username cannot be empty</string>
@@ -45,4 +45,13 @@
     <string name="preference_file_lastgame">com.example.ourgame.lastgame</string>
     <string name="username_empty">Username cannot be empty</string>
     <string name="main_menu_button">Main Menu</string>
+    <string name="exclamation">!</string>
+    <string name="too_soon">Too Soon!</string>
+    <string name="go">Go!</string>
+    <string name="ms">ms</string>
+    <string name="reaction_intro">When the screen turns green, tap as quickly as you can.</string>
+    <string name="wait">Wait...</string>
+    <string name="incorrect">INCORRECT!</string>
+    <string name="correct">CORRECT!</string>
+    <string name="passed_round">You passed this round!</string>
 </resources>
