--- a/phase1/app/src/main/res/values/strings.xml
+++ b/phase1/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="reaction_game">Reaction</string>
     <string name="tile_game">Tile</string>
     <string name="picture_game">Picture</string>
-
+    3
     <!-- Error messages -->
     <string name="password_empty">Password cannot be empty</string>
     <string name="login_error">Wrong Password or wrong username</string>
@@ -50,11 +50,28 @@
     <string name="go">Go!</string>
     <string name="ms">ms</string>
     <string name="reaction_intro">When the screen turns green, tap as quickly as you can.</string>
-    <string name="wait">Wait...</string>
+    <string name="wait">Wait…</string>
     <string name="incorrect">INCORRECT!</string>
     <string name="correct">CORRECT!</string>
     <string name="passed_round">You passed this round!</string>
     <string name="memoryGame">Memory Game</string>
     <string name="language">language</string>
     <string name="changeColor">Change Background Color</string>
+    <string name="tap_to_continue">Tap to continue</string>
+    <string name="tap_as_many_green_tiles_and_continue_for_as_long_as_possible">Tap as many green tiles and continue for as long as possible!</string>
+    <string name="start">Start!</string>
+    <string name="losing_three_lives_will_end_the_game">Losing three lives will end the game!</string>
+    <string name="the_green_tiles_while_avoiding_the_original_blue_tiles">the green tiles while avoiding the original blue tiles.</string>
+    <string name="your_job_is_to_memorize_the_locations_of_the_green_tiles_and_tap">Your job is to memorize the locations of the green tiles and tap</string>
+    <string name="every_round_a_set_of_tiles_will_appear_green_before_turning_blue">Every round, a set of tiles will appear green before turning blue.</string>
+    <string name="instructions">Instructions</string>
+    <string name="avoiding_the_incorrect_ones">avoiding the incorrect ones.</string>
+    <string name="if_you_miss_2_tiles_on_a_round_you_lose_a_life">If you miss 2 tiles on a round you lose a life!</string>
+    <string name="to_continue_to_the_next_round_click_all_the_correct_tiles_while">To continue to the next round, click all the correct tiles while</string>
+    <string name="incorrect_tile">incorrect tile</string>
+    <string name="if_you_pick_an_incorrect_tile_it_will_turn_red">If you pick an incorrect tile, it will turn red.</string>
+    <string name="if_you_pick_a_correct_tile_it_will_turn_green">If you pick a correct tile, it will turn green.</string>
+    <string name="memory_game">Memory Game</string>
+    <string name="unflipped_tile">unflipped tile</string>
+    <string name="flipped_correct_tile">flipped correct tile</string>
 </resources>
