The user in MainActivity is no longer static, now there is a seperate saved value of the current user.

--- a/phase1/app/src/main/res/values/strings.xml
+++ b/phase1/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="preference_file_time">com.example.ourgame.time</string>
     <string name="preference_file_ranking">com.example.ourgame.ranking</string>
     <string name="preference_file_lastgame">com.example.ourgame.lastgame</string>
+    <string name="preference_file_user">com.example.ourgame.user</string>
     <string name="username_empty">Username cannot be empty</string>
     <string name="main_menu_button">Main Menu</string>
     <string name="exclamation">!</string>
