Created customization activity and implemented basic language set up for main activity and reaction time game.

--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="memory_game">Memory Game</string>
     <string name="unflipped_tile">unflipped tile</string>
     <string name="flipped_correct_tile">flipped correct tile</string>
+    <string name="preference_file_language">com.example.ourgame.language</string>
 </resources>
