--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -44,6 +44,8 @@
     <string name="preference_file_ranking">com.example.ourgame.ranking</string>
     <string name="preference_file_lastgame">com.example.ourgame.lastgame</string>
     <string name="username_empty">Username cannot be empty</string>
+
+    <!--Game and menu text-->
     <string name="main_menu_button">Main Menu</string>
     <string name="exclamation">!</string>
     <string name="too_soon">Too Soon!</string>
@@ -90,6 +92,8 @@
     <string name="resume_game_french">Reprendre Le Jeu</string>
     <string name="check_stats_french">Vérifier les statistiques</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="rank_text">%1$s %2$s Points: %3$d </string>
+    <string name="personal_rank">Your Rank: %1$d</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
@@ -105,4 +109,6 @@
     <string name="attachment_summary_on">Automatically download attachments for incoming emails
     </string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="you_completed_every_level">You Completed Every Level!</string>
+    <string name="game_over">Game Over</string>
 </resources>
