--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -93,8 +93,18 @@
     <string name="resume_game_french">Reprendre Le Jeu</string>
     <string name="check_stats_french">Vérifier les statistiques</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="rank_text">%1$s %2$s Points: %3$d </string>
+    <string name="rank_text">%1$s %2$s</string>
+    <string name="points_text">%1$d</string>
     <string name="personal_rank">Your Rank: %1$d</string>
+    <string name="default_points">0</string>
+    <string name="points">Points</string>
+    <string name="user">User</string>
+    <string name="leaderboard">Leaderboard</string>
+    <string name="default_user_1">1. No One</string>
+    <string name="default_user_2">2. No One</string>
+    <string name="default_user_3">3. No One</string>
+    <string name="default_user_4">4. No One</string>
+    <string name="default_user_5">5. No One</string>
 
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
