A partially implements customization - language. Added languageTexts package which contains classes that sets the language for each activity.

--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -70,16 +70,14 @@
     <string name="tap_as_many_green_tiles_and_continue_for_as_long_as_possible">Tap as many green tiles and continue for as long as possible!</string>
     <string name="start">Start!</string>
     <string name="losing_three_lives_will_end_the_game">Losing three lives will end the game!</string>
-    <string name="the_green_tiles_while_avoiding_the_original_blue_tiles">the green tiles while avoiding the original blue tiles.</string>
-    <string name="your_job_is_to_memorize_the_locations_of_the_green_tiles_and_tap">Your job is to memorize the locations of the green tiles and tap</string>
-    <string name="every_round_a_set_of_tiles_will_appear_green_before_turning_blue">Every round, a set of tiles will appear green before turning blue.</string>
+    <string name="tile_instruction1">Every round, a set of tiles will appear green before turning blue \\nYour job is to memorize the locations of the green tiles and tap \\nthe green tiles while avoiding the original blue tiles.</string>
     <string name="instructions">Instructions</string>
     <string name="avoiding_the_incorrect_ones">avoiding the incorrect ones.</string>
     <string name="if_you_miss_2_tiles_on_a_round_you_lose_a_life">If you miss 2 tiles on a round you lose a life!</string>
     <string name="to_continue_to_the_next_round_click_all_the_correct_tiles_while">To continue to the next round, click all the correct tiles while</string>
     <string name="incorrect_tile">incorrect tile</string>
-    <string name="if_you_pick_an_incorrect_tile_it_will_turn_red">If you pick an incorrect tile, it will turn red.</string>
-    <string name="if_you_pick_a_correct_tile_it_will_turn_green">If you pick a correct tile, it will turn green.</string>
+    <string name="tile_instruction2">If you pick an incorrect tile, it will turn red.</string>
+    <string name="tile_instruction3">If you pick a correct tile, it will turn green.</string>
     <string name="memory_game">Memory Game</string>
     <string name="unflipped_tile">unflipped tile</string>
     <string name="flipped_correct_tile">flipped correct tile</string>
@@ -112,4 +110,5 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
     <string name="you_completed_every_level">You Completed Every Level!</string>
     <string name="game_over">Game Over</string>
+    <string name="preference_file_theme">com.example.ourgame.theme</string>
 </resources>
