--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -105,6 +105,37 @@
     <string name="default_user_4">4. No One</string>
     <string name="default_user_5">5. No One</string>
 
+    <string-array name="qwerty_keyboard">
+
+        <item>Q</item>
+        <item>W</item>
+        <item>E</item>
+        <item>R</item>
+        <item>T</item>
+        <item>Y</item>
+        <item>U</item>
+        <item>I</item>
+        <item>O</item>
+        <item>P</item>
+        <item>A</item>
+        <item>S</item>
+        <item>D</item>
+        <item>F</item>
+        <item>G</item>
+        <item>H</item>
+        <item>J</item>
+        <item>K</item>
+        <item>L</item>
+        <item>Z</item>
+        <item>X</item>
+        <item>C</item>
+        <item>V</item>
+        <item>B</item>
+        <item>N</item>
+        <item>M</item>
+
+    </string-array>
+
     <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
@@ -123,4 +154,5 @@
     <string name="game_over">Game Over</string>
     <string name="preference_file_theme">com.example.ourgame.theme</string>
     <string name="h">after game</string>
+    <string name="win_result">You win!</string>
 </resources>
