--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -123,4 +123,5 @@
     <string name="game_over">Game Over</string>
     <string name="preference_file_theme">com.example.ourgame.theme</string>
     <string name="h">after game</string>
+    <string name="preference_file_character">com.example.ourgame.character</string>
 </resources>
