Refactored SettingsActivity to remove some switch statements and if / else blocks, by looping through arrays of buttons in a radio group, buttons in a layout, and image ids in an integer list. Created GameName enum to standardise names of games.

--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -156,4 +156,6 @@
     <string name="h">after game</string>
     <string name="preference_file_character">com.example.ourgame.character</string>
     <string name="win_result">You win!</string>
+    <string name="language_english">English</string>
+    <string name="language_french">French</string>
 </resources>
