--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -32,9 +32,9 @@
     <string name="enter_button">Enter</string>
     <string name="continue_button">Continue</string>
     <string name="reaction_game">Reaction</string>
-    <string name="tile_game">Tile</string>
-    <string name="picture_game">Picture</string>
-    <string name="runner_game">Runner</string>
+    <string name="tile_game">Tile Game</string>
+    <string name="picture_game">Picture Game</string>
+    <string name="runner_game">Runner Game</string>
 
     <!-- Error messages -->
     <string name="password_empty">Password cannot be empty</string>
@@ -65,20 +65,13 @@
     <string name="correct">CORRECT!</string>
     <string name="passed_round">You passed this round!</string>
     <string name="memoryGame">Memory Game</string>
-    <string name="language">language</string>
+    <string name="language">Language</string>
     <string name="changeColor">Change Background Color</string>
     <string name="tap_to_continue">Tap to continue</string>
-    <string name="tap_as_many_green_tiles_and_continue_for_as_long_as_possible">Tap as many green tiles and continue for as long as possible!</string>
     <string name="start">Start!</string>
-    <string name="losing_three_lives_will_end_the_game">Losing three lives will end the game!</string>
-    <string name="tile_instruction1">Every round, a set of tiles will appear green before turning blue \\nYour job is to memorize the locations of the green tiles and tap \\nthe green tiles while avoiding the original blue tiles.</string>
     <string name="instructions">Instructions</string>
     <string name="avoiding_the_incorrect_ones">avoiding the incorrect ones.</string>
-    <string name="if_you_miss_2_tiles_on_a_round_you_lose_a_life">If you miss 2 tiles on a round you lose a life!</string>
-    <string name="to_continue_to_the_next_round_click_all_the_correct_tiles_while">To continue to the next round, click all the correct tiles while</string>
     <string name="incorrect_tile">incorrect tile</string>
-    <string name="tile_instruction2">If you pick an incorrect tile, it will turn red.</string>
-    <string name="tile_instruction3">If you pick a correct tile, it will turn green.</string>
     <string name="memory_game">Memory Game</string>
     <string name="unflipped_tile">unflipped tile</string>
     <string name="flipped_correct_tile">flipped correct tile</string>
@@ -88,22 +81,14 @@
     <string name="start_new_game">START NEW GAME</string>
     <string name="resume_game">RESUME GAME</string>
     <string name="check_stats">CHECK STATISTICS</string>
-    <string name="start_new_game_french">Commencer une nouvelle partie</string>
-    <string name="resume_game_french">Reprendre Le Jeu</string>
-    <string name="check_stats_french">Vérifier les statistiques</string>
     <string name="title_activity_settings">Settings</string>
-    <string name="rank_text">%1$s %2$s</string>
-    <string name="points_text">%1$s</string>
     <string name="personal_rank">Your Rank:</string>
     <string name="default_points">0</string>
     <string name="points">Points</string>
+    <string name="playtime">Play Time</string>
     <string name="user">User</string>
     <string name="leaderboard">Leaderboard</string>
-    <string name="default_user_1">No One</string>
-    <string name="default_user_2">2. No One</string>
-    <string name="default_user_4" translatable="false">4. No One</string>
-    <string name="default_user_5" translatable="false">5. No One</string>
-    <string name="playtime">Playtime</string>
+    <string name="default_user">No One</string>
     <string name="ranking">Ranking</string>
     <string name="back">Back</string>
 
@@ -160,4 +145,36 @@
     <string name="win_result">You win!</string>
     <string name="language_english">English</string>
     <string name="language_french">French</string>
+    <string name="default_hangman_blanks">_ _ _ _ s a s _</string>
+    <string name="hangman_title">Hangman</string>
+    <string name="default_game_title">Game Title</string>
+    <string name="play_button">play</string>
+    <string name="one">1.</string>
+    <string name="two">2.</string>
+    <string name="three">3.</string>
+    <string name="four">4.</string>
+    <string name="five">5.</string>
+    <string name="rank_by">Rank by:</string>
+    <string name="picture">Picture</string>
+    <string name="default_welcome_message">Welcome, (username)!</string>
+    <string name="main_menu_reminder">For testing only (DELETE when done)</string>
+    <string name="statistics">Statistics</string>
+    <string name="settings">Settings</string>
+    <string name="running">Running</string>
+    <string name="hangman">Hangman</string>
+    <string name="tile">Tile</string>
+    <string name="number_of_attempts">Number of Attempts:</string>
+    <string name="default_ready_message">Ready Message</string>
+    <string name="reaction_time">Reaction Time</string>
+    <string name="default_num_levels">0/5</string>
+    <string name="default_average_time">0ms</string>
+    <string name="theme">Theme</string>
+    <string name="change_character">change character</string>
+    <string name="english">English</string>
+    <string name="french">Français</string>
+    <string name="default_username">username</string>
+    <string name="ranking_label">Ranking:</string>
+    <string name="points_label">Total Points:</string>
+    <string name="playtime_label">Total Playtime:</string>
+    <string name="default_lives_remaining">Lives Remaining: 3/3</string>
 </resources>
