Refactored to remove redundant or unnecessary code, and to remove warnings. Made updating of ranking more intuitive. Added clear data button that clears the data for all the users.

--- a/phase2/app/src/main/res/values/strings.xml
+++ b/phase2/app/src/main/res/values/strings.xml
@@ -177,4 +177,5 @@
     <string name="points_label">Total Points:</string>
     <string name="playtime_label">Total Playtime:</string>
     <string name="default_lives_remaining">Lives Remaining: 3/3</string>
+    <string name="clear_data">clear data</string>
 </resources>
